# oclhelpers

./: CMakeLists.txt  Config.cmake.in  Dockerfile  README.md  make_release_package.py  oclhelpers.cpp  oclhelpers.hpp
.github/workflows/: docker-build-flow.yml
test/: CMakeLists.txt  test.cpp  vadd.cl
